docs/getting-started/infrastructure/controllers/istio.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    toolkit.fluxcd.io/tenant: sre-team
