docs/getting-started/infrastructure/controllers/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openmfp-system
  labels:
    toolkit.fluxcd.io/tenant: dev-team
    istio-injection: enabled
