docs/getting-started/infrastructure/controllers/ocm-controller.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ocm-system
  labels:
    toolkit.fluxcd.io/tenant: sre-team
