docs/getting-started/infrastructure/controllers/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: openmfp-system
spec:
  selector:
    istio: gateway
  servers:
    - port:
        number: 8080
        name: http
        protocol: HTTP
      hosts:
        - "*"
